@@ -1,3 +1,9 @@
+2018-08-24  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+        [BZ #23400]
+        * stdlib/test-bz22786.c (do_test): Fix undefined behavior, don't
+        create temporary files in source tree.
+
 2018-08-24  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/generic/math-tests-trap.h: New file.
